<resources>
    <string name="app_name">Electric Tour</string>

    // Main Trip View
    <string name="message_distance_to_next_checkpoint">Distance to next : </string>
    <string name="message_eta_to_next_checkpoint">ETA to next : </string>
    <string name="title_marker_current_location">Current location</string>
    <string name="hint_search_checkpoints">Search for checkpoints…</string>
    <string name="message_no_internet_reloading_saved_tour">Internet Connection is not available at this moment, reloading your last saved trip !</string>
    <string name="message_location_updates">Monitoring your location in the background !</string>
    <string name="error_message_no_internet_connection">Error while trying to connect to the internet !</string>
    <string name="error_message_internet_connection_intrerupted">Network connection was interrupted, aborting !</string>
    <string name="suffix_kilometers"> Km</string>
    <string name="hint_click_to_start_navigation">Click to start navigation\nfrom your current location</string>
    <string name="hint_swipe_up_to_see_details">Swipe up to see more trip details</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_sign_in">Sign In With Google Account</string>
    <string name="hint_enable_route_deviation">Enable trip deviation notifications</string>
    <string name="hint_enable_current_location_monitoring">Enable current location tracking</string>
    <string name="message_notify_deviation">You are deviating from the planned trip !</string>
    <string name="title_warning">Warning !</string>
    <string name="title_no_tour_selected">No route</string>
    <string name="title_please_select_tour">Please select the desired trip for today</string>
    <string name="label_line_chart">Selected trip altitude</string>
    <string name="label_line_chart_values">Values are expressed in meters</string>
    <string name="message_sign_in_successful">Signed in successfully !</string>
    <string name="message_sign_in_failed">Sign in failed !</string>
    <string name="message_sign_in_with_google_failed">Signing in with your Google Account Failed !</string>
    <string name="message_account_not_authorized">This Google Account is not authorized to use this application, please contact the administrator to gain access rights!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="message_server_down">Server is currently down, probably due to maintenance reasons!</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_clear">Clear</string>
    <string name="prefix_driving_distance">Trip Distance</string>
    <string name="prefix_driving_duration">Trip Duration</string>
    <string name="message_no_information_available">No information available</string>
    <string name="btn_select_trip_label">Select \n Trip</string>
    <string name="btn_start_navigation">Start \n Navigation</string>
    <string name="btn_clear_navigation_selection">Clear \n Selection</string>
    <string name="title_altitude_chart">Trip Altitude Chart</string>

    // Settings
    <string name="application_version">App Version</string>

    //
    <string name="btn_settings">Settings</string>
    <string name="btn_current_trip">Current Trip</string>
    <string name="btn_plan_new_trip">Plan New Trip</string>

    // Add/Edit Trip View
    <string name="btn_add_checkpoint">Add Checkpoint</string>
    <string name="btn_finish_trip_planning">Finish Planning</string>
    <string name="hint_enter_trip_name">Please enter trip name</string>
    <string name="label_address">Destination address</string>


    // Create New Trip
    <string name="hint_trip_name">Trip Name</string>
    <string name="hint_trip_description">Trip Description</string>
    <string name="button_next">Next</string>
    <string name="error_trip_name_is_mandatory">Trip name is mandatory!</string>
    <string name="error_while_creating_your_trip">Error while trying to create your trip!</string>

    // Add/Edit New Trip Checkpoint Details
    <string name="hint_enter_checkpoint_name">Destination name</string>
    <string name="hint_enter_checkpoint_description">Destination description</string>
    <string name="hint_checkpoint_tracking_description">By enabling arrival or departure notifications, the application will notify you when you have approached or departed from the vicinity of this checkpoint</string>
    <string name="hint_enable_checkpoint_arrival_tracking">Enable arrival notifications for this destination</string>
    <string name="hint_enable_checkpoint_departure_tracking">Enable departure notifications for this destination</string>
    <string name="btn_save_checkpoint_details">Save</string>
    <string name="btn_delete_checkpoint">Delete</string>
    <string name="message_please_add_at_least_tqo_checkpoints_to_trip">Please add at least 2 checkpoints to a planned trip before saving it !</string>
    <string name="message_successfully_saved_trip">Successfully saved your planned trip !</string>
    <string name="message_error_saving_trip">Failed while trying to save your planned trip !</string>
    <string name="hint_swipe_to_to_reorder">Swipe up to reorder checkpoints</string>
    <string name="message_error_adding_checkpoint">Error adding the selected checkpoint !</string>
    <string name="message_error_deleting_checkpoint">Error deleting the selected checkpoint !</string>
    <string name="message_eror_updating_checkpoint_postion">Error updating the location of the selected checkpoint</string>
    <string name="message_error_calculating_route">Error calculating the selected route !</string>
    <string name="message_error_loading_checkpoints">Error while trying to load your trip checkpoints !</string>

    // Dummy testing strings
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum_extra_long">Lorem ipsum dolor sit amet, in ultrices mauris dapibus tristique nunc. Lobortis donec tortor ipsum odio quam tortor, dapibus dolor dolor quae, nam justo leo omnis, dictum tellus dolor. Praesent aliquet a morbi vitae velit dis. Urna suscipit, mi turpis eu duis et urna placerat, lectus amet aliquam orci pulvinar a conubia, id aut odio ante amet dui. </string>

</resources>
