<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_current_trip"
        android:enabled="true"
        android:icon="@drawable/ic_directions_white_24dp"
        android:title="@string/btn_current_trip"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_create_trip"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/btn_plan_new_trip"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/btn_settings"
        app:showAsAction="ifRoom" />
</menu>