<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.grandtour.ev.evgrandtour.ui.settings.SettingsDialogViewModel" />

        <variable
            name="presenter"
            type="com.grandtour.ev.evgrandtour.ui.settings.SettingsDialogContract.Presenter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tab_page_background"
        android:padding="@dimen/margin_normal">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_large"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:switchPadding="@dimen/margin_small"
                    android:text="@string/hint_enable_current_location_monitoring"
                    android:theme="@style/SwitchStyle" />

                <Switch
                    android:id="@+id/switchDeviationNotifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:switchPadding="@dimen/margin_small"
                    android:text="@string/hint_enable_route_deviation"
                    android:theme="@style/SwitchStyle" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:onClick="@{()-> presenter.onSignOutButtonClicked()}"
                android:paddingEnd="@dimen/margin_large"
                android:paddingStart="@dimen/margin_large"
                android:text="@string/btn_sign_out"
                android:textColor="@android:color/black"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="@dimen/margin_normal" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_normal"
            android:text="@={viewModel.appVersion}"
            android:textSize="12sp"
            android:textStyle="italic" />

    </RelativeLayout>
</layout>
