<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.grandtour.ev.evgrandtour.ui.settings.SettingsDialogViewModel" />

        <variable
            name="presenter"
            type="com.grandtour.ev.evgrandtour.ui.settings.SettingsDialogContract.Presenter" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <Switch
                    android:theme="@style/SwitchStyle"
                    android:id="@+id/switchLocation"
                    android:text="@string/hint_enable_current_location_monitoring"
                    android:layout_margin="@dimen/margin_medium"
                    android:switchPadding="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Switch
                    android:theme="@style/SwitchStyle"
                    android:id="@+id/switchDeviationNotifications"
                    android:text="@string/hint_enable_route_deviation"
                    android:switchPadding="@dimen/margin_small"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        <TextView
            android:id="@+id/txtAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_normal"
            android:text="@={viewModel.appVersion}"
            android:textSize="12sp"
            android:textStyle="italic" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btnSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_medium"
            android:onClick="@{()-> presenter.onSignOutButtonClicked()}"
            android:paddingEnd="@dimen/margin_large"
            android:paddingStart="@dimen/margin_large"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/black"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="@dimen/margin_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <android.support.design.button.MaterialButton
            android:id="@+id/buttonDismiss"
            app:backgroundTint="@android:color/holo_red_light"
            app:cornerRadius="@dimen/margin_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_large"
            android:layout_gravity="center_horizontal"
            android:paddingStart="@dimen/margin_large"
            android:onClick="@{()-> presenter.onDismissButtonClicked()}"
            android:text="@string/btn_dimiss"
            android:textColor="@android:color/white" />

    </LinearLayout>
</layout>
